--- a/connectors-new.html
+++ b/connectors-new.html
@@ -455,12 +455,14 @@
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
                                                     <div class="box-bottom-bar">
                                                         <div>
-                                                            <label class="container-custom-checkbox">
-                                                                <input type="checkbox" checked="checked">
-                                                                <span class="checkmark"></span>
-                                                            </label>
+                                                            <div class="field-check-box">
+                                                                <div class="fl remember">
+                                                                    <input type="checkbox" name="loginRemember"
+                                                                        id="remember">
+                                                                    <label for="remember">Enable</label>
+                                                                </div>
 
-                                                            Enable
+                                                            </div>
                                                         </div>
                                                         <div><span class="c-green"></span> (1)</div>
                                                     </div>
@@ -478,12 +480,16 @@
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
                                                     <div class="box-bottom-bar">
                                                         <div>
-                                                            <label class="container-custom-checkbox">
-                                                                <input type="checkbox">
-                                                                <span class="checkmark"></span>
-                                                            </label>
 
-                                                            Enable
+                                                            <div class="field-check-box">
+                                                                <div class="fl remember">
+                                                                    <input type="checkbox" name="loginRemember"
+                                                                        id="remember1">
+                                                                    <label for="remember1">Enable</label>
+                                                                </div>
+
+                                                            </div>
+
                                                         </div>
                                                         <div><span class="c-orange"></span> (1)</div>
                                                     </div>
@@ -500,12 +506,16 @@
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
                                                     <div class="box-bottom-bar">
                                                         <div>
-                                                            <label class="container-custom-checkbox">
-                                                                <input type="checkbox">
-                                                                <span class="checkmark"></span>
-                                                            </label>
+                                                            <div class="field-check-box">
+                                                                <div class="fl remember">
+                                                                    <input type="checkbox" name="loginRemember"
+                                                                        id="remember2">
+                                                                    <label for="remember2">Disabled</label>
+                                                                </div>
 
-                                                            Disabled
+                                                            </div>
+
+
                                                         </div>
                                                         <div><span class="c-green"></span> (1)</div>
                                                     </div>
@@ -523,12 +533,14 @@
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
                                                     <div class="box-bottom-bar">
                                                         <div>
-                                                            <label class="container-custom-checkbox">
-                                                                <input type="checkbox" checked="checked">
-                                                                <span class="checkmark"></span>
-                                                            </label>
+                                                            <div class="field-check-box">
+                                                                <div class="fl remember">
+                                                                    <input type="checkbox" name="loginRemember"
+                                                                        id="remember3">
+                                                                    <label for="remember3">Enable</label>
+                                                                </div>
 
-                                                            Enable
+                                                            </div>
                                                         </div>
                                                         <div><span class="c-green"></span> (1)</div>
                                                     </div>
@@ -546,12 +558,139 @@
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
                                                     <div class="box-bottom-bar">
                                                         <div>
-                                                            <label class="container-custom-checkbox">
-                                                                <input type="checkbox" checked="checked">
-                                                                <span class="checkmark"></span>
-                                                            </label>
+                                                            <div class="field-check-box">
+                                                                <div class="fl remember">
+                                                                    <input type="checkbox" name="loginRemember"
+                                                                        id="remember4">
+                                                                    <label for="remember4">Enable</label>
+                                                                </div>
 
-                                                            Enable
+                                                            </div>
+                                                        </div>
+                                                        <div><span class="c-green"></span> (1)</div>
+                                                    </div>
+                                                </div>
+                                                <!---box css end here-->
+
+                                                <!---box css start-->
+                                                <div class="connec-box-div">
+                                                    <div class="box-logo">
+                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                    </div>
+                                                    <div class="box-title">Versioning</div>
+                                                    <div class="box-content">Keep multiple versions of an object in the
+                                                        same bucket.</div>
+                                                    <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
+                                                    <div class="box-bottom-bar">
+                                                        <div>
+                                                            <div class="field-check-box">
+                                                                <div class="fl remember">
+                                                                    <input type="checkbox" name="loginRemember"
+                                                                        id="remember5">
+                                                                    <label for="remember5">Enable</label>
+                                                                </div>
+
+                                                            </div>
+                                                        </div>
+                                                        <div><span class="c-green"></span> (1)</div>
+                                                    </div>
+                                                </div>
+                                                <!---box css end here-->
+
+                                                <!---box css start-->
+                                                <div class="connec-box-div">
+                                                    <div class="box-logo">
+                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                    </div>
+                                                    <div class="box-title">Versioning</div>
+                                                    <div class="box-content">Keep multiple versions of an object in the
+                                                        same bucket.</div>
+                                                    <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
+                                                    <div class="box-bottom-bar">
+                                                        <div>
+                                                            <div class="field-check-box">
+                                                                <div class="fl remember">
+                                                                    <input type="checkbox" name="loginRemember"
+                                                                        id="remember6">
+                                                                    <label for="remember6">Enable</label>
+                                                                </div>
+
+                                                            </div>
+                                                        </div>
+                                                        <div><span class="c-green"></span> (1)</div>
+                                                    </div>
+                                                </div>
+                                                <!---box css end here-->
+
+                                                <!---box css start-->
+                                                <div class="connec-box-div">
+                                                    <div class="box-logo">
+                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                    </div>
+                                                    <div class="box-title">Versioning</div>
+                                                    <div class="box-content">Keep multiple versions of an object in the
+                                                        same bucket.</div>
+                                                    <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
+                                                    <div class="box-bottom-bar">
+                                                        <div>
+                                                            <div class="field-check-box">
+                                                                <div class="fl remember">
+                                                                    <input type="checkbox" name="loginRemember"
+                                                                        id="remember7">
+                                                                    <label for="remember7">Enable</label>
+                                                                </div>
+
+                                                            </div>
+                                                        </div>
+                                                        <div><span class="c-green"></span> (1)</div>
+                                                    </div>
+                                                </div>
+                                                <!---box css end here-->
+
+                                                <!---box css start-->
+                                                <div class="connec-box-div">
+                                                    <div class="box-logo">
+                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                    </div>
+                                                    <div class="box-title">Versioning</div>
+                                                    <div class="box-content">Keep multiple versions of an object in the
+                                                        same bucket.</div>
+                                                    <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
+                                                    <div class="box-bottom-bar">
+                                                        <div>
+                                                            <div class="field-check-box">
+                                                                <div class="fl remember">
+                                                                    <input type="checkbox" name="loginRemember"
+                                                                        id="remember8">
+                                                                    <label for="remember8">Enable</label>
+                                                                </div>
+
+                                                            </div>
+                                                        </div>
+                                                        <div><span class="c-green"></span> (1)</div>
+                                                    </div>
+                                                </div>
+                                                <!---box css end here-->
+
+                                                <!---box css start-->
+                                                <div class="connec-box-div">
+                                                    <div class="box-logo">
+                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                    </div>
+                                                    <div class="box-title">Versioning</div>
+                                                    <div class="box-content">Keep multiple versions of an object in the
+                                                        same bucket.</div>
+                                                    <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
+                                                    <div class="box-bottom-bar">
+                                                        <div>
+                                                            <div class="field-check-box">
+                                                                <div class="fl remember">
+                                                                    <input type="checkbox" name="loginRemember"
+                                                                        id="remember9">
+                                                                    <label for="remember9">Enable</label>
+                                                                </div>
+
+                                                            </div>
                                                         </div>
                                                         <div><span class="c-green"></span> (1)</div>
                                                     </div>
