text and logo update connectors new page

--- a/connectors-new.html
+++ b/connectors-new.html
@@ -447,9 +447,9 @@
                                                 <!---box css start-->
                                                 <div class="connec-box-div">
                                                     <div class="box-logo">
-                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                        <a href="#"><img src="images/active_directory_logo.png"></a>
                                                     </div>
-                                                    <div class="box-title">Versioning</div>
+                                                    <div class="box-title">Microsoft Active Directory</div>
                                                     <div class="box-content">Keep multiple versions of an object in the
                                                         same bucket.</div>
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
@@ -457,7 +457,7 @@
                                                         <div>
                                                             <div class="field-check-box">
                                                                 <div class="fl remember">
-                                                                    <input type="checkbox" name="loginRemember"
+                                                                    <input type="checkbox" checked name="loginRemember"
                                                                         id="remember">
                                                                     <label for="remember">Enable</label>
                                                                 </div>
@@ -474,7 +474,7 @@
                                                     <div class="box-logo">
                                                         <a href="#"><img src="images/fortigate_logo.png"></a>
                                                     </div>
-                                                    <div class="box-title">Server access logging</div>
+                                                    <div class="box-title">Trend Micro Deep Security</div>
                                                     <div class="box-content">Set up access log records that provide
                                                         details about access requests.</div>
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
@@ -483,7 +483,7 @@
 
                                                             <div class="field-check-box">
                                                                 <div class="fl remember">
-                                                                    <input type="checkbox" name="loginRemember"
+                                                                    <input type="checkbox" checked name="loginRemember"
                                                                         id="remember1">
                                                                     <label for="remember1">Enable</label>
                                                                 </div>
@@ -491,7 +491,8 @@
                                                             </div>
 
                                                         </div>
-                                                        <div><span class="c-orange"></span> (1)</div>
+                                                        <div><span class="c-orange"></span> <span>(<span
+                                                                    class="red-text">1</span>/3)</span></div>
                                                     </div>
                                                 </div>
                                                 <!---box css end here-->
@@ -499,9 +500,9 @@
                                                 <!---box css start-->
                                                 <div class="connec-box-div">
                                                     <div class="box-logo">
-                                                        <a href="#"><img src="images/eset_logo.png"></a>
+                                                        <a href="#"><img src="images/deep_security_logo.png"></a>
                                                     </div>
-                                                    <div class="box-title">Versioning</div>
+                                                    <div class="box-title">CrowdStrike Falcon</div>
                                                     <div class="box-content">Keep multiple versions of.</div>
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
                                                     <div class="box-bottom-bar">
@@ -525,9 +526,9 @@
                                                 <!---box css start-->
                                                 <div class="connec-box-div">
                                                     <div class="box-logo">
-                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                        <a href="#"><img src="images/solarwinds_orion_logo.png"></a>
                                                     </div>
-                                                    <div class="box-title">Versioning</div>
+                                                    <div class="box-title">Cylance Prot...</div>
                                                     <div class="box-content">Keep multiple versions of an object in the
                                                         same bucket.</div>
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
@@ -535,7 +536,7 @@
                                                         <div>
                                                             <div class="field-check-box">
                                                                 <div class="fl remember">
-                                                                    <input type="checkbox" name="loginRemember"
+                                                                    <input type="checkbox" checked name="loginRemember"
                                                                         id="remember3">
                                                                     <label for="remember3">Enable</label>
                                                                 </div>
@@ -550,9 +551,9 @@
                                                 <!---box css start-->
                                                 <div class="connec-box-div">
                                                     <div class="box-logo">
-                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                        <a href="#"><img src="images/aws_logo.png"></a>
                                                     </div>
-                                                    <div class="box-title">Versioning</div>
+                                                    <div class="box-title">Trend Micro Deep Security</div>
                                                     <div class="box-content">Keep multiple versions of an object in the
                                                         same bucket.</div>
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
@@ -562,7 +563,7 @@
                                                                 <div class="fl remember">
                                                                     <input type="checkbox" name="loginRemember"
                                                                         id="remember4">
-                                                                    <label for="remember4">Enable</label>
+                                                                    <label for="remember4">Disable</label>
                                                                 </div>
 
                                                             </div>
@@ -575,7 +576,7 @@
                                                 <!---box css start-->
                                                 <div class="connec-box-div">
                                                     <div class="box-logo">
-                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                        <a href="#"><img src="images/cylance_logo.png"></a>
                                                     </div>
                                                     <div class="box-title">Versioning</div>
                                                     <div class="box-content">Keep multiple versions of an object in the
@@ -585,7 +586,7 @@
                                                         <div>
                                                             <div class="field-check-box">
                                                                 <div class="fl remember">
-                                                                    <input type="checkbox" name="loginRemember"
+                                                                    <input type="checkbox" checked name="loginRemember"
                                                                         id="remember5">
                                                                     <label for="remember5">Enable</label>
                                                                 </div>
@@ -600,9 +601,9 @@
                                                 <!---box css start-->
                                                 <div class="connec-box-div">
                                                     <div class="box-logo">
-                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                        <a href="#"><img src="images/deep_security_logo.png"></a>
                                                     </div>
-                                                    <div class="box-title">Versioning</div>
+                                                    <div class="box-title">Trend Micro Deep Security</div>
                                                     <div class="box-content">Keep multiple versions of an object in the
                                                         same bucket.</div>
                                                     <div class="box-learnmore-btn"><a href="#">Learn more </a></div>
@@ -610,7 +611,7 @@
                                                         <div>
                                                             <div class="field-check-box">
                                                                 <div class="fl remember">
-                                                                    <input type="checkbox" name="loginRemember"
+                                                                    <input type="checkbox" checked name="loginRemember"
                                                                         id="remember6">
                                                                     <label for="remember6">Enable</label>
                                                                 </div>
@@ -635,7 +636,7 @@
                                                         <div>
                                                             <div class="field-check-box">
                                                                 <div class="fl remember">
-                                                                    <input type="checkbox" name="loginRemember"
+                                                                    <input type="checkbox" checked name="loginRemember"
                                                                         id="remember7">
                                                                     <label for="remember7">Enable</label>
                                                                 </div>
@@ -650,7 +651,7 @@
                                                 <!---box css start-->
                                                 <div class="connec-box-div">
                                                     <div class="box-logo">
-                                                        <a href="#"><img src="images/nexpose_logo.png"></a>
+                                                        <a href="#"><img src="images/active_directory_logo.png"></a>
                                                     </div>
                                                     <div class="box-title">Versioning</div>
                                                     <div class="box-content">Keep multiple versions of an object in the
@@ -660,7 +661,7 @@
                                                         <div>
                                                             <div class="field-check-box">
                                                                 <div class="fl remember">
-                                                                    <input type="checkbox" name="loginRemember"
+                                                                    <input type="checkbox" checked name="loginRemember"
                                                                         id="remember8">
                                                                     <label for="remember8">Enable</label>
                                                                 </div>
@@ -685,7 +686,7 @@
                                                         <div>
                                                             <div class="field-check-box">
                                                                 <div class="fl remember">
-                                                                    <input type="checkbox" name="loginRemember"
+                                                                    <input type="checkbox" checked name="loginRemember"
                                                                         id="remember9">
                                                                     <label for="remember9">Enable</label>
                                                                 </div>
