--- a/policy-center-1.html
+++ b/policy-center-1.html
@@ -466,14 +466,20 @@
 
 
                                   <div class="full-search-row">
-                                    <div class="search-wrap-standard search-inverse">
-                                      <input type="text" placeholder="Search Action Library" class="search-field">
+                                    <form action="">
+                                      <div class="search-wrap-standard search-inverse">
 
-                                      <!-- <a href="#" class="search-query-dropdown-btn">
+                                        <input type="submit" value="" placeholder="" class="search-icon-btn">
+                                        <input type="text" placeholder="Search Action Library" class="search-field">
+
+
+
+                                        <!-- <a href="#" class="search-query-dropdown-btn">
                                         <img src="images/down-arrow.svg">
                                       </a> -->
 
-                                    </div>
+                                      </div>
+                                    </form>
                                   </div>
 
 
