--- a/sample-web.html
+++ b/sample-web.html
@@ -35,6 +35,7 @@
             text-align: center;
             background: url(images/Website-hero-v2.gif) no-repeat;
             background-size: cover;
+            min-height: 897px;
             height: 100vh;
         }
 
@@ -42,8 +43,9 @@
             margin: 0px auto;
             text-align: center;
             background: url(images/Website--vInventa--bottom.png) no-repeat;
-            /* background-size: cover; */
-            height: 6920px;
+            background-size: cover;
+            min-height: 7900px;
+            height: 100vh;
         }
     </style>
 
@@ -60,7 +62,7 @@
 
             <div class="row m-0">
 
-                <div class="col-lg-12">
+                <div class="col-lg-12 center">
                     <div class="top-img">
                         <!-- <img src="images/Website-hero-v2.gif" /> -->
                     </div>
