--- a/sample-web.html
+++ b/sample-web.html
@@ -62,7 +62,7 @@
 
             <div class="row m-0">
 
-                <div class="col-lg-12 center">
+                <div class="col-lg-12 center p-0">
                     <div class="top-img">
                         <!-- <img src="images/Website-hero-v2.gif" /> -->
                     </div>
