--- a/dashboard.html
+++ b/dashboard.html
@@ -124,6 +124,14 @@
             </div>
           </a>
         </li>
+        <li class="pushy-link">
+          <a href="#">
+            <div class="menu-img admin-icon"></div>
+            <div>
+              Admin
+            </div>
+          </a>
+        </li>
 
         <div class="mobile-menu-bottom">
           <a href="#">
@@ -228,6 +236,17 @@
           <li>
             <div class="menu-img analytic-icon"></div>
             <a href="#">Analaytic</a>
+
+            <ul class="header-submenu">
+              <li><a href="#">SubMenu 2</a></li>
+              <li><a href="#">SubMenu 3</a></li>
+              <li><a href="#">SubMenu 4</a></li>
+              <li><a href="#">SubMenu 5</a></li>
+            </ul>
+          </li>
+          <li>
+            <div class="menu-img admin-icon"></div>
+            <a href="#">Admin</a>
 
             <ul class="header-submenu">
               <li><a href="#">SubMenu 2</a></li>
