policy routine resulte page

--- a/all-links.html
+++ b/all-links.html
@@ -126,6 +126,12 @@
                     <p>
                       <a href="policy-center-tasks.html" target="_blank">Policy Center Tasks</a>
                     </p>
+                    <br />
+                    <br />
+                    <br />
+                    <p>
+                      <a href="policy-routine-results.html" target="_blank">Policy Routine Results</a>
+                    </p>
                   </div>
                 </div>
 
